updated frontend, working login, tutorial toggle, and machine creation/edit

--- a/frontend/src/app/change-log/change-log-set/change-log-set.component.html
+++ b/frontend/src/app/change-log/change-log-set/change-log-set.component.html
@@ -7,30 +7,30 @@
       <div *ngIf="model == 'Machine'">
         <h5>Machine: <br><strong>{{log.old.machine}}</strong></h5>
         <h5>Job: <br>
-          <strong *ngIf="log.old.current_job">{{log.old.current_job}}</strong>
-          <strong *ngIf="!log.old.current_job">None</strong>
+          <strong *ngIf="log.old.currentJob">{{log.old.currentJob}}</strong>
+          <strong *ngIf="!log.old.currentJob">None</strong>
         </h5>
       </div>
       <div *ngIf="model == 'Part'">
         <h5>Part: <br><strong>{{log.old.part}}</strong></h5>
         <h5 *ngIf="log.old.job">Current Job: <br><strong>{{log.old.job}}</strong></h5>
         <h5 *ngIf="log.old.machine">Current Machine: <br><strong>{{log.old.machine}}</strong></h5>
-        <h5 *ngIf="log.old.cycle_time">Cycle Time: <br><strong>{{log.old.cycle_time}}</strong></h5>
-        <h5 *ngIf="log.old.order_quantity">Order Quantity: <br><strong>{{log.old.order_quantity}}</strong></h5>
-        <h5 *ngIf="log.old.weight_recieved">Weight Recieved: <br><strong>{{log.old.weight_recieved}}</strong></h5>
-        <h5 *ngIf="log.old.weight_quantity">Potential Quantity by Weight: <br><strong>{{log.old.weight_quantity}}</strong></h5>
-        <h5 *ngIf="log.old.weight_length">Total Length of Bars by Weight: <br><strong>{{log.old.weight_length}}</strong></h5>
-        <h5 *ngIf="log.old.possible_quantity">Possible Quantity by Bars: <br><strong>{{log.old.possible_quantity}}</strong></h5>
-        <h5 *ngIf="log.old.remaining_quantity">Remaining Quantity: <br><strong>{{log.old.remaining_quantity}}</strong></h5>
-        <h5 *ngIf="log.old.heat_lot">Heat Lot#: <br><strong>{{log.old.heat_lot}}</strong></h5>
+        <h5 *ngIf="log.old.cycleTime">Cycle Time: <br><strong>{{log.old.cycleTime}}</strong></h5>
+        <h5 *ngIf="log.old.orderQuantity">Order Quantity: <br><strong>{{log.old.orderQuantity}}</strong></h5>
+        <h5 *ngIf="log.old.weightRecieved">Weight Recieved: <br><strong>{{log.old.weightRecieved}}</strong></h5>
+        <h5 *ngIf="log.old.weightQuantity">Potential Quantity by Weight: <br><strong>{{log.old.weightQuantity}}</strong></h5>
+        <h5 *ngIf="log.old.weightLength">Total Length of Bars by Weight: <br><strong>{{log.old.weightLength}}</strong></h5>
+        <h5 *ngIf="log.old.possibleQuantity">Possible Quantity by Bars: <br><strong>{{log.old.possibleQuantity}}</strong></h5>
+        <h5 *ngIf="log.old.remainingQuantity">Remaining Quantity: <br><strong>{{log.old.remainingQuantity}}</strong></h5>
+        <h5 *ngIf="log.old.heatLot">Heat Lot#: <br><strong>{{log.old.heatLot}}</strong></h5>
       </div>
       <div *ngIf="model == 'Hourly'">
         <h5>Time: <br><strong>{{log.old.time}}</strong></h5>
         <h5>Job #: <br><strong>{{log.old.job}}</strong></h5>
-        <h5>Quantity: <br><strong>{{log.old.hard_quantity}}</strong></h5>
+        <h5>Quantity: <br><strong>{{log.old.quantity}}</strong></h5>
         <h5>Counter: <br>
-          <strong *ngIf="log.old.counter_quantity">{{log.old.counter_quantity}}</strong>
-          <strong *ngIf="!log.old.counter_quantity">None</strong>
+          <strong *ngIf="log.old.counterQuantity">{{log.old.counterQuantity}}</strong>
+          <strong *ngIf="!log.old.counterQuantity">None</strong>
         </h5>
       </div>
       <div *ngIf="model == 'Production'">
