--- a/frontend/src/app/hourly/hourly-set-job/hourly-set-job.component.html
+++ b/frontend/src/app/hourly/hourly-set-job/hourly-set-job.component.html
@@ -4,11 +4,11 @@
 </div>
 <form *ngIf="setJobForm && jobs.length > 1" [formGroup]="setJobForm" (ngSubmit)="onSetJob()">
 <div class="form-group">
-  <label for="current_job">Job</label>
+  <label for="currentJob">Job</label>
   <select
-    formControlName='current_job'
+    formControlName='currentJob'
     type="text" 
-    id="current_job" 
+    id="currentJob" 
     class="form-control">
     <option *ngFor = "let job of jobs">{{job}}</option>
   </select>        
