--- a/frontend/src/app/machine/machine-show/machine-show.component.html
+++ b/frontend/src/app/machine/machine-show/machine-show.component.html
@@ -2,8 +2,8 @@
   <div *ngFor="let machine of machines; let i=index"> 
     <div class="border">
       <h3>{{machine.machine}}</h3>
-      <h4 *ngIf="machine.current_job">Current Job: {{machine.current_job}}</h4>
-      <h4 class="white-text" *ngIf="!machine.current_job">0</h4>
+      <h4 *ngIf="machine.currentJob">Current Job: {{machine.currentJob}}</h4>
+      <h4 class="white-text" *ngIf="!machine.currentJob">0</h4>
       <div class="grid2">
         <button class='btn btn-primary' routerLink="edit/{{machine.id}}">Edit</button>
         <button class='btn btn-danger' (click)="onDelete(machine.id, machine.machine)">Delete</button>
