--- a/frontend/src/app/part/calculator/by-weight/by-weight.component.html
+++ b/frontend/src/app/part/calculator/by-weight/by-weight.component.html
@@ -114,9 +114,9 @@
       </div>
     </div>
     <hr>
-    <div class="row" *ngIf="partServ.partHold.cycle_time">
+    <div class="row" *ngIf="partServ.partHold.cycleTime">
       <div class='col-xs-12'>
-        <h3> Run Hours Remaining: {{calc.partsToMake*partServ.partHold.cycle_time}}</h3>
+        <h3> Run Hours Remaining: {{calc.partsToMake*partServ.partHold.cycleTime}}</h3>
         <div class='row'>
       </div>
     </div>
