--- a/frontend/src/app/part/part-edit/part-edit.component.html
+++ b/frontend/src/app/part/part-edit/part-edit.component.html
@@ -22,10 +22,10 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="cycle_time">Cycle Time (Seconds - Optional)</label>
+        <label for="cycleTime">Cycle Time (Seconds - Optional)</label>
         <input 
-          formControlName='cycle_time'
-          id="cycle_time" 
+          formControlName='cycleTime'
+          id="cycleTime" 
           type="number"
           class="form-control"
         >
@@ -39,19 +39,19 @@
           class="form-control">
       </div>
       <div class="form-group">
-        <label for="order_quantity">Order Quantity (Optional)</label>
+        <label for="orderQuantity">Order Quantity (Optional)</label>
         <input 
-          formControlName='order_quantity'
+          formControlName='orderQuantity'
           type="number" 
-          id="order_quantity" 
+          id="orderQuantity" 
           class="form-control">
       </div>
       <div class="form-group">
-        <label for="weight_recieved">Weight Recieved (Optional)</label>
+        <label for="weightRecieved">Weight Recieved (Optional)</label>
         <input 
-          formControlName='weight_recieved'
+          formControlName='weightRecieved'
           type="number" 
-          id="weight_recieved" 
+          id="weightRecieved" 
           class="form-control">
       </div>
       <div class="form-group">
@@ -63,27 +63,27 @@
           class="form-control">
       </div>
       <div class="form-group">
-        <label for="cut_off">Cut Off Size (Optional)</label>
+        <label for="cutOff">Cut Off Size (Optional)</label>
         <input 
-          formControlName='cut_off'
+          formControlName='cutOff'
           type="number" 
-          id="cut_off" 
+          id="cutOff" 
           class="form-control">
       </div>
       <div class="form-group">
-        <label for="main_facing">Amount Faced on Main Spindle (Optional)</label>
+        <label for="mainFacing">Amount Faced on Main Spindle (Optional)</label>
         <input 
-          formControlName='main_facing'
+          formControlName='mainFacing'
           type="number" 
-          id="main_facing" 
+          id="mainFacing" 
           class="form-control">
       </div>
       <div class="form-group">
-        <label for="sub_facing">Amount Faced on Sub Spindle (Optional)</label>
+        <label for="subFacing">Amount Faced on Sub Spindle (Optional)</label>
         <input 
-          formControlName='sub_facing'
+          formControlName='subFacing'
           type="number" 
-          id="sub_facing" 
+          id="subFacing" 
           class="form-control">
       </div>
       <br><br>
