--- a/frontend/src/app/production/production-single/production-single.component.html
+++ b/frontend/src/app/production/production-single/production-single.component.html
@@ -1,5 +1,5 @@
 <ul class='list-group'>
-    <li *ngIf="production.in_question" class='inQuestion list-group-item'>
+    <li *ngIf="production.inQuestion" class='inQuestion list-group-item'>
         <div *ngIf="production" >
             <h4>Date: {{production.date}}</h4>
             <h4>Job #: {{production.job}}</h4>
@@ -10,7 +10,7 @@
             <button class='btn btn-primary pull-right' routerLink="../../{{production.job}}">Show Job Production</button>
         </div>
     </li>
-    <li *ngIf="!production.in_question" class='list-group-item'>
+    <li *ngIf="!production.inQuestion" class='list-group-item'>
         <div *ngIf="production" >
             <h4>Date: {{production.date}}</h4>
             <h4>Job #: {{production.job}}</h4>
