--- a/frontend/src/app/hourly/hourly-new-short/hourly-new-short.component.html
+++ b/frontend/src/app/hourly/hourly-new-short/hourly-new-short.component.html
@@ -1,18 +1,18 @@
 <form *ngIf="hourlyForm" [formGroup]="hourlyForm" (ngSubmit)='onSubmit()' >
 <div class="form-group">
-    <label for="hard_quantity">Hard Quantity</label>
+    <label for="quantity">Hard Quantity</label>
     <input 
-        formControlName='hard_quantity'
+        formControlName='quantity'
         type="number" 
-        id="hard_quantity" 
+        id="quantity" 
         class="form-control">
 </div>
 <div class="form-group">
-    <label for="counter_quantity">Counter Quantity</label>
+    <label for="counterQuantity">Counter Quantity</label>
     <input 
-        formControlName='counter_quantity'
+        formControlName='counterQuantity'
         type="number" 
-        id="counter_quantity" 
+        id="counterQuantity" 
         class="form-control">
 </div>
 <button 
