--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
@@ -2,8 +2,8 @@
     <div>
         <h5>Time: <br><strong>{{lot.time}}</strong><br>
         Job #: <br><strong>{{lot.job}}</strong><br>
-        Quantity: <br><strong>{{lot.hard_quantity}}</strong>
-        <div *ngIf="lot.counter_quantity">Counter: <br><strong>{{lot.counter_quantity}}</strong></div></h5>
+        Quantity: <br><strong>{{lot.quantity}}</strong>
+        <div *ngIf="lot.counterQuantity">Counter: <br><strong>{{lot.counterQuantity}}</strong></div></h5>
         <div class="grid">
             <button class='btn btn-primary' routerLink="edit/{{lot.id}}">Edit</button>
         </div>
