--- a/frontend/src/app/hourly/hourly-show/hourly-show.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show.component.html
@@ -6,7 +6,7 @@
         <li class ="list-group-item" *ngFor="let mach of machines; let i=index">
             <ul *ngIf="machines" class="list-group">
                 <h2>{{mach.machine}}</h2>
-                <div *ngIf="mach.current_job !== 'None'" class="btn-grid">
+                <div *ngIf="mach.currentJob !== 'None'" class="btn-grid">
                     <button 
                         *ngIf="!hourServ.quick[i]" 
                         class="btn btn-info" 
@@ -15,7 +15,7 @@
                         Quick Input
                     </button>
                 </div>
-                <div class="btn-grid" *ngIf="mach.current_job ==='None'">
+                <div class="btn-grid" *ngIf="mach.currentJob ==='None'">
                     <button 
                         *ngIf="!hourServ.quick[i]" 
                         class="btn btn-success" 
@@ -24,11 +24,11 @@
                         Set Job
                     </button>                    
                 </div>
-                <div *ngIf="hourServ.quick[i] && mach.current_job !=='None'">
+                <div *ngIf="hourServ.quick[i] && mach.currentJob !=='None'">
                     <app-hourly-new-short [index]="i">
                     </app-hourly-new-short>     
                 </div>
-                <div *ngIf="hourServ.quick[i] && mach.current_job ==='None'">
+                <div *ngIf="hourServ.quick[i] && mach.currentJob ==='None'">
                     <app-hourly-set-job [index]="i">
                     </app-hourly-set-job>     
                 </div>
