--- a/frontend/src/app/part/part-show/part-show.component.html
+++ b/frontend/src/app/part/part-show/part-show.component.html
@@ -2,27 +2,27 @@
   <div *ngFor="let part of parts"> 
     <div class="border">
       <div class="grid2">
-        <button *ngIf="!part.possible_quantity" class='btn btn-primary' routerLink="calculator/job/{{part.id}}">Length Calc</button>
-        <button *ngIf="part.possible_quantity" class='btn btn-info' routerLink="calculator/{{part.id}}">Remaining Bars</button>
-        <button *ngIf="!part.weight_quantity" class='btn btn-success' routerLink="calculator/weight/{{part.id}}">Weight Calc</button>
+        <button *ngIf="!part.possibleQuantity" class='btn btn-primary' routerLink="calculator/job/{{part.id}}">Length Calc</button>
+        <button *ngIf="part.possibleQuantity" class='btn btn-info' routerLink="calculator/{{part.id}}">Remaining Bars</button>
+        <button *ngIf="!part.weightQuantity" class='btn btn-success' routerLink="calculator/weight/{{part.id}}">Weight Calc</button>
       </div>
       <div routerLink="part={{part.part}}">
         <br>
         <h3>{{part.part}}</h3>
         <h4>Current Job: <br> {{part.job}}</h4>
         <h4>Current Machine: <br> {{part.machine}}</h4>
-        <h4 *ngIf="part.cycle_time">Cycle Time: {{part.cycle_time}}</h4>
-        <h4 *ngIf="!part.possible_quantity && !part.weight_quantity && part.order_quantity">Possible Quantity: {{part.order_quantity}}
-        <h4 *ngIf="part.cycle_time"> Total Machine Hours: {{((part.order_quantity*part.cycle_time)/3600).toFixed(2)}}</h4>
+        <h4 *ngIf="part.cycleTime">Cycle Time: {{part.cycleTime}}</h4>
+        <h4 *ngIf="!part.possibleQuantity && !part.weightQuantity && part.orderQuantity">Possible Quantity: {{part.orderQuantity}}
+        <h4 *ngIf="part.cycleTime"> Total Machine Hours: {{((part.orderQuantity*part.cycleTime)/3600).toFixed(2)}}</h4>
         </h4>
-        <h4 *ngIf="!part.possible_quantity && part.weight_quantity">Possible Quantity: {{part.weight_quantity}}
-        <h4 *ngIf="part.cycle_time"> Total Machine Hours: {{((part.weight_quantity*part.cycle_time)/3600).toFixed(2)}}</h4>
+        <h4 *ngIf="!part.possibleQuantity && part.weightQuantity">Possible Quantity: {{part.weightQuantity}}
+        <h4 *ngIf="part.cycleTime"> Total Machine Hours: {{((part.weightQuantity*part.cycleTime)/3600).toFixed(2)}}</h4>
         </h4>
-        <h4 *ngIf="part.possible_quantity">Possible Quantity: {{part.possible_quantity}}
-        <h4 *ngIf="part.cycle_time"> Total Machine Hours: {{((part.possible_quantity*part.cycle_time)/3600).toFixed(2)}}</h4>
+        <h4 *ngIf="part.possibleQuantity">Possible Quantity: {{part.possibleQuantity}}
+        <h4 *ngIf="part.cycleTime"> Total Machine Hours: {{((part.possibleQuantity*part.cycleTime)/3600).toFixed(2)}}</h4>
         </h4>
-        <h4 *ngIf="part.remaining_quantity">Remaining Quantity: {{part.remaining_quantity}}
-        <h4 *ngIf="part.cycle_time"> Remaining Machine Hours: {{((part.remaining_quantity*part.cycle_time)/3600).toFixed(2)}}</h4>
+        <h4 *ngIf="part.remainingQuantity">Remaining Quantity: {{part.remainingQuantity}}
+        <h4 *ngIf="part.cycleTime"> Remaining Machine Hours: {{((part.remainingQuantity*part.cycleTime)/3600).toFixed(2)}}</h4>
         </h4> <br><br>
       </div>
       <div class="grid2">
