--- a/frontend/src/app/production/production-new/production-new.component.html
+++ b/frontend/src/app/production/production-new/production-new.component.html
@@ -18,7 +18,7 @@
         type="text" 
         id="job" 
         class="form-control">
-        <option *ngFor = "let mach of fullMach">{{mach.current_job}}</option>
+        <option *ngFor = "let mach of fullMach">{{mach.currentJob}}</option>
       </select>        
     </div>
     <div class="form-group">
