--- a/frontend/src/app/hourly/hourly-find/hourly-find.component.html
+++ b/frontend/src/app/hourly/hourly-find/hourly-find.component.html
@@ -1,13 +1,13 @@
 
 <form (ngSubmit)='onSubmit()' #data="ngForm"> 
   <div class="form-group">
-    <label for="job">Job #:</label>
+    <label for="jobNumber">Job #:</label>
     <input 
       type="text" 
-      id="job" 
+      id="jobNumber" 
       class="form-control"
       ngModel
-      name='job'>
+      name='jobNumber'>
     <br>
     <label for="machine">Machine</label>
     <select 
