--- a/frontend/src/app/hourly/hourly-new/hourly-new.component.html
+++ b/frontend/src/app/hourly/hourly-new/hourly-new.component.html
@@ -24,11 +24,11 @@
         class="form-control">
     </div>
     <div class="form-group">
-      <label for="job">Job</label>
+      <label for="jobNumber">Job</label>
       <input 
-        formControlName='job'
+        formControlName='jobNumber'
         type="text" 
-        id="job" 
+        id="jobNumber" 
         class="form-control">
     </div>
     <div class="form-group">
