--- a/frontend/src/app/hourly/hourly-set-job/hourly-set-job.component.html
+++ b/frontend/src/app/hourly/hourly-set-job/hourly-set-job.component.html
@@ -10,7 +10,7 @@
     type="text" 
     id="currentJob" 
     class="form-control">
-    <option *ngFor = "let job of jobs">{{job}}</option>
+    <option *ngFor = "let jobNumber of jobs">{{jobNumber}}</option>
   </select>        
 </div>
 <button 
