--- a/frontend/src/app/job/calculator/remaining/remaining.component.html
+++ b/frontend/src/app/job/calculator/remaining/remaining.component.html
@@ -87,7 +87,7 @@
     <hr>
     <div class="row" *ngIf="calc.submitted">
       <div class='col-xs-12'>
-        <h3> Jobs Left to Make: {{calc.jobsToMake}}</h3>
+        <h3> Parts Left to Make: {{calc.partsToMake}}</h3>
         <div class='row'>
       </div>
     </div>
