--- a/frontend/src/app/production/production-edit/production-edit.component.html
+++ b/frontend/src/app/production/production-edit/production-edit.component.html
@@ -19,7 +19,7 @@
         id="job" 
         class="form-control">
         <option 
-          [selected]="job === production.job"
+          [selected]="job === production.jobNumber"
           *ngFor = "let job of jobs">{{job}}</option>
       </select>        
     </div>
