--- a/frontend/src/app/production/production-list/production-list.component.html
+++ b/frontend/src/app/production/production-list/production-list.component.html
@@ -4,7 +4,7 @@
             <button class="btn btn-success" (click)="lotIsGood(lot.id)">Set Lot Good</button>
             <div routerLink="single/{{lot.id}}">
                 <h4>Date: <strong>{{lot.date}}</strong></h4>
-                <h4>Job #: <strong>{{lot.job}}</strong></h4>
+                <h4>Job #: <strong>{{lot.jobNumber}}</strong></h4>
                 <h4>Shift: <strong>{{lot.shift}}</strong></h4>
                 <h4>Quantity: <strong>{{lot.quantity}}</strong></h4>
                 <h4>Machine: <strong>{{lot.machine}}</strong></h4>
@@ -13,7 +13,7 @@
             <div class='grid'>
                 <button class='btn btn-primary' routerLink="single/{{lot.id}}/edit">Edit This Lot</button>
                 <div></div>
-                <button class='btn btn-info pull-right' [routerLink]="[lot.job]">Show Job Production</button>
+                <button class='btn btn-info pull-right' [routerLink]="[lot.jobNumber]">Show Job Production</button>
                 <div></div>
                 <button class='btn btn-primary pull-right' routerLink="/day/{{dayServ.dates[i]}}">Show Day Production</button>
             </div>
@@ -22,7 +22,7 @@
             <button class="btn btn-danger" (click)="lotInQuestion(lot.id)">Set Lot In Question</button>
             <div routerLink="single/{{lot.id}}">
                 <h4>Date: <strong>{{lot.date}}</strong></h4>
-                <h4>Job #: <strong>{{lot.job}}</strong></h4>
+                <h4>Job #: <strong>{{lot.jobNumber}}</strong></h4>
                 <h4>Shift: <strong>{{lot.shift}}</strong></h4>
                 <h4>Quantity: <strong>{{lot.quantity}}</strong></h4>
                 <h4>Machine: <strong>{{lot.machine}}</strong></h4>
@@ -31,7 +31,7 @@
             <div class='grid'>
                 <button class='btn btn-primary' routerLink="single/{{lot.id}}/edit">Edit This Lot</button>
                 <div></div>
-                <button class='btn btn-info pull-right' [routerLink]="[lot.job]">Show Job Production</button>
+                <button class='btn btn-info pull-right' [routerLink]="[lot.jobNumber]">Show Job Production</button>
                 <div></div>
                 <button class='btn btn-primary pull-right' routerLink="/day/{{dayServ.dates[i]}}">Show Day Production</button>
             </div>
