--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -36,6 +36,8 @@
             <ul class="dropdown-menu">
               <li><a routerLink='/machine'>Machines</a></li>
               <li><a routerLink='/parts'>Parts</a></li>
+              <li><a routerLink='/jobs'>Jobs</a></li>
+              <li><a routerLink='/ops'>Operations</a></li>
               <li><a routerLink='/production'>Production</a></li>
               <li><a routerLink='/hourly'>Hourly</a></li>
               <li><a routerLink='/parts/calculator'>Length From Weight</a></li>
