--- a/frontend/src/app/hourly/hourly-show/hourly-show.component.css
+++ b/frontend/src/app/hourly/hourly-show/hourly-show.component.css
@@ -16,8 +16,15 @@ h4 {
     text-align: center;
 }
 
+h3{
+    text-align: center;
+    line-height: 100%;
+}
+
 h2{
     text-align: center;
+    line-height: 100%;
+    /* margin: 0%; */
 }
 
 h1{
