--- a/frontend/src/app/hourly/hourly-show/hourly-show.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show.component.html
@@ -6,6 +6,7 @@
         <li class ="list-group-item" *ngFor="let mach of machines; let i=index">
             <ul *ngIf="machines" class="list-group">
                 <h2>{{mach.machine}}</h2>
+                <h3>{{mach.currentJob}}</h3>
                 <div *ngIf="mach.currentJob !== 'None'" class="btn-grid">
                     <button 
                         *ngIf="!hourServ.quick[i]" 
