--- a/frontend/src/app/job/calculator/by-weight/by-weight.component.html
+++ b/frontend/src/app/job/calculator/by-weight/by-weight.component.html
@@ -102,7 +102,7 @@
     <hr>
     <div class="row" *ngIf="calc.submitted">
       <div class='col-xs-12'>
-        <h3> Jobs Left to Make: {{calc.jobsToMake}}</h3>
+        <h3> Parts Left to Make: {{calc.partsToMake}}</h3>
         <div class='row'>
       </div>
     </div>
@@ -116,7 +116,7 @@
     <hr>
     <div class="row" *ngIf="jobServ.jobHold.cycleTime">
       <div class='col-xs-12'>
-        <h3> Run Hours Remaining: {{calc.jobsToMake*jobServ.jobHold.cycleTime}}</h3>
+        <h3> Run Hours Remaining: {{calc.partsToMake*jobServ.jobHold.cycleTime}}</h3>
         <div class='row'>
       </div>
     </div>
