--- a/frontend/src/app/job/job-edit/job-edit.component.html
+++ b/frontend/src/app/job/job-edit/job-edit.component.html
@@ -3,20 +3,21 @@
   </div>
     <form *ngIf="canInput && editJobForm" [formGroup]="editJobForm" (ngSubmit)='onSubmit()' >
       <div class="form-group">
-        <label for="job">Job#</label>
+        <label for="jobNumber">Job#</label>
         <input 
-          formControlName='job'
-          id="job" 
+          formControlName='jobNumber'
+          id="jobNumber" 
           class="form-control"
         >
       </div>
-      <div class="form-group">
-        <label for="part">Part#</label>
-        <input 
-          formControlName='part'
-          type="text" 
-          id="part" 
+      <div *ngIf="machines" class="form-group">
+        <label for="partNum">Part#</label>
+        <select
+          formControlName='partNum'
+          id="partNum" 
           class="form-control">
+          <option *ngFor = "let part of parts">{{part.partNumber}}</option>
+        </select>
       </div>
       <div class="form-group">
         <label for="orderQuantity">Order Quantity (Optional)</label>
