--- a/frontend/src/app/production/production-by-job/production-by-job-select/production-by-job-select.component.html
+++ b/frontend/src/app/production/production-by-job/production-by-job-select/production-by-job-select.component.html
@@ -7,7 +7,7 @@
             <li class='border' *ngFor="let lot of production; let i = index" >
                 <div *ngIf="lot.inQuestion" class="inQuestion">
                     <h4>Date: <strong>{{lot.date}}</strong></h4>
-                    <h4>Job #: <strong>{{lot.job}}</strong></h4>
+                    <h4>Job #: <strong>{{lot.jobNumber}}</strong></h4>
                     <h4>Shift: <strong>{{lot.shift}}</strong></h4>
                     <h4>Quantity: <strong>{{lot.quantity}}</strong></h4>
                     <h4>Machine: <strong>{{lot.machine}}</strong></h4>
@@ -16,7 +16,7 @@
                 </div>
                 <div *ngIf="!lot.inQuestion">
                     <h4>Date: <strong>{{lot.date}}</strong></h4>
-                    <h4>Job #: <strong>{{lot.job}}</strong></h4>
+                    <h4>Job #: <strong>{{lot.jobNumber}}</strong></h4>
                     <h4>Shift: <strong>{{lot.shift}}</strong></h4>
                     <h4>Quantity: <strong>{{lot.quantity}}</strong></h4>
                     <h4>Machine: <strong>{{lot.machine}}</strong></h4>
